package bt_java.baitap_ca3;

public interface ThayDoiTiGia {
    void nhanThongBao(float delta);

}
